<resources>
    <!--calculator-->
    <string name="back">return</string>
    <string name="totClear">c</string>
    <string name="backspace">back</string>
    <string name="percentage">%</string>
    <string name="division">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiplying">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subtracting">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="addition">+</string>
    <string name="zero">0</string>
    <string name="decNumb">.</string>
    <string name="changNumbSign">+/-</string>
    <string name="equality">=</string>
    <!--main activity-->
    <string name="app_name">TopacAdemy_android</string>
    <string name="behalf">login</string>
    <string name="beginning">start</string>
    <string name="parole">password</string>
    <string name="logInToProf">log in to profile</string>
    <!--home-->
    <string name="homeAct">home activity</string>
    <string name="calculator_">calculator</string>
    <string name="listing">list</string>
    <string name="weather_">weather</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!--navigation menu-->
    <string name="basPart">main fragment</string>
    <string name="calcPiece">calculator fragment</string>
    <string name="listPiece">list fragment</string>
    <string name="weatherPiece">weather fragment</string>
    <!--main fragment-->
    <string name="accEnt">account is entered</string>
</resources>