<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Toolbar
        android:id="@+id/tools"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layHeightOfToolPan"
        android:background="@color/purple"
        android:navigationIcon="@drawable/arrow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/margVertOfHomeAct"
        android:text="@string/homeAct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calcButt"
        android:layout_width="@dimen/widthOfCalcButt"
        android:layout_height="@dimen/layHeightOfMatButtInMainAct"
        android:layout_marginVertical="@dimen/margVertOfCalcLay"
        android:text="@string/calculator_"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/listButt"
        android:layout_width="@dimen/widthOfCalcButt"
        android:layout_height="@dimen/layHeightOfMatButtInMainAct"
        android:layout_marginVertical="@dimen/margVertOfListLay"
        android:text="@string/listing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/temperature"
        android:layout_width="@dimen/widthOfCalcButt"
        android:layout_height="@dimen/layHeightOfMatButtInMainAct"
        android:layout_marginTop="@dimen/weather"
        android:text="@string/weather_"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>