<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="@dimen/layWidthOfEdTextOfLog"
        android:layout_height="@dimen/layHeightOfEdTextOfLog"
        android:autofillHints="name"
        android:hint="@string/behalf"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="@dimen/layWidthOfEdTextOfPar"
        android:layout_height="@dimen/layHeightOfEdTextOfPar"
        android:layout_marginVertical="@dimen/margVertOfLayOfEdTextOfPar"
        android:autofillHints="password"
        android:hint="@string/parole"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/material"
        android:layout_width="@dimen/layWidthOfMatButtInMainAct"
        android:layout_height="@dimen/layHeightOfMatButtInMainAct"
        android:layout_marginVertical="@dimen/margVertOfLayOfMatButtInMainAct"
        android:text="@string/beginning"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>